Fetching main and other branches

--- a/views/layouts/index.handlebars
+++ b/views/layouts/index.handlebars
@@ -18,8 +18,9 @@
         </nav>
     </header>
     <main>
-        <div>//game area</div>
-        <div>chat area</div>
+        {{{ body }}}
+        {{!-- <div>//game area</div>
+        <div>chat area</div> --}}
     </main>
     <footer>Brought to you by HyperJ</footer>
 
