--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChattleShip</title>
-</head>
-<body>
-    <div>
-        <header>
-            <h1>
-                <a href="/">ChattleShip</a>
-            </h1>
-        </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../../public/css/tail-style.css">
+        <title>ChattleShip</title>
+    </head>
+    <body>
         <div>
-            
+            <header>
+                <h1 class = "border-2 border-indigo-600">
+                    <a href="/">ChattleShip</a>
+                </h1>
+            </header>
+            <div>
+            </div>
         </div>
-    </div>
-</body>
-<main>
-    {{{body}}}
-</main>
+    </body>
+    <main>
+        {{{body}}}
+    </main>
+    <footer>
+        Brought to you by Hyper J 
+    </footer>
 </html>
