--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../../public/css/tail-style.css">
+        <link href="/css/tail-style.css" rel="stylesheet" >
         <title>ChattleShip</title>
     </head>
     <body>
         <div>
-            <header>
-                <h1 class = "border-2 border-indigo-600">
+            <header class="border-4">
+                <h1>
                     <a href="/">ChattleShip</a>
                 </h1>
             </header>
