--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,21 +7,26 @@
         <link href="/css/tail-style.css" rel="stylesheet" >
         <title>ChattleShip</title>
     </head>
-    <body>
-        <div>
-            <header class="border-4">
-                <h1>
-                    <a href="/">ChattleShip</a>
-                </h1>
-            </header>
-            <div>
-            </div>
-        </div>
+    <body class="h-screen">
+        <header class="flex justify-around p-5">
+            <a class="flex items-center" href="/">
+                <h1>ChattleShip</h1>
+            </a>
+            <nav class="w-1/3 mx-4"> 
+                <ul class="flex flex-row p-8 justify-around">
+                  <li><a href="/">link1</a></li>
+                  <li><a href="/">link2</a></li>
+                  <li><a href="/">link3</a></li>  
+                </ul>
+            </nav>
+        </header>
+        <main class="h-5/6">
+            {{{body}}}
+        </main>
+        <footer class="flex justify-center">
+            Brought to you by Hyper J 
+        </footer>
     </body>
-    <main>
-        {{{body}}}
-    </main>
-    <footer>
-        Brought to you by Hyper J 
-    </footer>
+    
+    
 </html>
