--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="h-5/6">
+        <main class="h-5/6 flex flex-col w-full h-full border-2 box-border p-12 md:flex-row md:justify-between">
             {{{body}}}
         </main>
         <footer class="flex justify-center">
