Added some files to project

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,5 +1,7 @@
-<div class="game-area box-border border-2 h-full w-4/5 flex justify-around">
-    <button class="border-2 my-44" type="submit"> Play Game </button>
-    <button class="border-2 my-44" type="submit"> Instructions </button>
+<div>
+    <div class="game-area box-border border-2 h-full w-4/5 flex justify-around">
+        <button class="border-2 my-44" type="submit"> Play Game </button>
+        <button class="border-2 my-44" type="submit"> Instructions </button>
+    </div>
+    {{> chat}}
 </div>
-{{> chat}}
