--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -1,4 +1,5 @@
  <div class="chat-area flex flex-col box-border border-2 p-3">
+     <title></title>
     <chat>
         john: hello yall, this is a chat-area
     </chat>
