--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,17 @@
             <a class="flex items-center" href="/">
                 <h1>ChattleShip</h1>
             </a>
+            {{!-- {{log this}} --}}
+            {{#if loggedIn}}
             <nav class="w-1/3 mx-4"> 
                 <ul class="flex flex-row p-8 justify-around">
-                  <li><a href="/">link1</a></li>
+                  
+                  <li><a href="/">Logout</a></li>
                   <li><a href="/">link2</a></li>
-                  <li><a href="/">link3</a></li>  
+                  <li><a href="/">link3</a></li> 
                 </ul>
             </nav>
+            {{/if}}
         </header>
         <main class="h-5/6 flex flex-col w-full h-full border-2 box-border p-12 md:flex-row md:justify-between">
             {{{body}}}
