--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,21 +1,21 @@
-<section class="flex justify-around">
-    <div>
+<section class="flex justify-around ">
+    <div class="flex flex-col">
         <button id="resumeGame" type="submit">Resume</button>
         <a>
-            <ul>
+            <ul class="flex flex-col">
                 {{!-- list area for resumable games --}}
             </ul>
         </a>
     </div>
-    <div>
+    <div class="flex flex-col">
         <button id="joinGame" type="submit">Join</button>
         <a>
-            <ul>
+            <ul class="flex flex-col">
                 {{!-- joinable games --}}
             </ul>
         </a>
     </div>
-    <div>
+    <div class="flex flex-col">
         <button id="createGame" type="submit">Create</button>
     </div>
 </section>
