--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,29 +1,38 @@
-<form class="login-form">
-  <div>
-    <label for="username-login">username:</label>
-    <input type="text" id="username-login" />
-  </div>
-  <div>
-    <label for="password-login">password:</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit">login</button>
-  </div>
-</form>
+<div class="flex flex-col">
+    <h3 class="border-b-4 p-2">Login Here:</h3>
+    <frm class="login-form">
+    <div>
+        <label for="username-login">username:</label>
+        <input type="text" id="username-login" />
+    </div>
+    <div>
+        <label for="password-login">password:</label>
+        <input type="password" id="password-login" />
+    </div>
+    <div>
+        <button type="submit">login</button>
+    </div>
+    </form>
+</div>
 
-<form class="signup-form">
-  <div>
-    <label for="username-signup">username:</label>
-    <input type="text" id="username-signup" />
-  </div>
-  <div>
-    <label for="password-signup">password:</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit">signup</button>
-  </div>
-</form>
+<div class="flex flex-col p-5">
+    <h2>OR</h2>
+</div>
 
+<div class="flex flex-col">
+    <h3 class="border-b-4 p-2">Sign Up Here:</h3>
+    <form class="signup-form">
+    <div>
+        <label for="username-signup">username:</label>
+        <input type="text" id="username-signup" />
+    </div>
+    <div>
+        <label for="password-signup">password:</label>
+        <input type="password" id="password-signup" />
+    </div>
+    <div>
+        <button type="submit">signup</button>
+    </div>
+    </form>
+</div>
 <script src="/javascript/login.js"></script>
