Added styles - still no dark mode YET

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <section class="flex justify-around ">
     <div class="flex flex-col">
-        <button id="resumeGame" type="submit">Resume</button>
+        <button id="resumeGame" class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" type="submit">Resume</button>
         <a>
             <ul class="flex flex-col">
                 {{!-- list area for resumable games --}}
@@ -8,7 +8,7 @@
         </a>
     </div>
     <div class="flex flex-col">
-        <button id="joinGame" type="submit">Join</button>
+        <button id="joinGame" class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" type="submit">Join</button>
         <a>
             <ul class="flex flex-col">
                 {{!-- joinable games --}}
@@ -16,6 +16,6 @@
         </a>
     </div>
     <div class="flex flex-col">
-        <button id="createGame" type="submit">Create</button>
+        <button id="createGame" class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" type="submit">Create</button>
     </div>
 </section>
