--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     </head>
     <body class="h-screen font-mono prose-md sm:prose-xl">
         <header class="flex flex-col justify-between p-3">
-            <a class="flex justify-end" href="/"><span class="oi" data-glyph="cog"></span></a>
+            <a class="flex justify-end" href="/"><span class="oi border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" data-glyph="cog"></span></a>
         
             <div class="flex flex-col justify-between sm:flex-row">
                 <a class="flex justify-center prose-lg sm:items-center" href="/">
@@ -24,9 +24,9 @@
                 {{!-- {{#if loggedIn}} --}}
                 <nav class="flex justify-center sm:w-2/3 sm:"> 
                     <ul class="flex flex-col content-center sm:w-3/4 justify-around sm:content sm:flex-row sm:p-2">
-                    <li><a href="/">Profile</a></li> 
-                    <li><a href="/">Dashboard</a></li>
-                    <li><a href="/">Logout</a></li>
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Profile</a></li> 
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Dashboard</a></li>
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Logout</a></li>
                     <li></li>
                     {{!-- settings icon to bring down toggle to switch to dark mode --}}
                     </ul>
