logout functionality partially done

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
                     <ul class="flex flex-col content-center sm:w-3/4 justify-around sm:content sm:flex-row sm:p-2">
                     <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Profile</a></li> 
                     <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Dashboard</a></li>
-                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Logout</a></li>
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/" id="logout">Logout</a></li>
                     <li></li>
                     {{!-- settings icon to bring down toggle to switch to dark mode --}}
                     </ul>
@@ -45,4 +45,5 @@
     </body>
     
     {{!-- md:flex-row md:justify-between --}}
+	<script src="./javascript/logout.js"></script>
 </html>
