--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="flex flex-col">
     <h3 class="border-b-4 p-2">Login Here:</h3>
-    <frm class="login-form">
+    <form class="login-form">
     <div>
         <label for="username-login">username:</label>
         <input type="text" id="username-login" />
