--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,9 +24,15 @@
                 {{!-- {{#if loggedIn}} --}}
                 <nav class="flex justify-center sm:w-2/3 sm:"> 
                     <ul class="flex flex-col content-center sm:w-3/4 justify-around sm:content sm:flex-row sm:p-2">
-                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Profile</a></li> 
-                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Dashboard</a></li>
+					{{#if loggedIn}}
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/profile">Profile</a></li> 
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/dashboard">Dashboard</a></li>
                     <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/" id="logout">Logout</a></li>
+					{{else}}
+					<li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Profile</a></li>
+                    <li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Dashboard</a></li>
+					<li><a class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" href="/">Login</a></li>
+					{{/if}}
                     <li></li>
                     {{!-- settings icon to bring down toggle to switch to dark mode --}}
                     </ul>
