added to profile page

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,24 @@
 <div class="flex flex-col sm:flex-row">
-    <div>soup</div>
-    <div>soup</div>
-    <div>soup</div>
-    <div>ramen</div>
+    <div>
+        <h3>Account</h3>
+        <h2>Username</h2>
+        <h2>Date Created</h2>
+    </div>
+    <div>
+        <h3>Resume Game</h3>
+        <a>
+            <ul class="flex flex-col">
+                {{!-- list area for resumable games --}}
+            </ul>
+        </a>
+    </div>
+    <div>
+        <h3>Chat</h3>
+        <ol>
+            <li class="flex">
+                <h1>Username</h1>
+                <p>Sample chat text</p>
+            </li>
+        </ol>
+    </div>
 </div>
