--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,22 +1,22 @@
-<div class="flex flex-col sm:flex-row">
+<div class="flex flex-col sm:flex-row justify-around">
     <div>
         <h3>Account</h3>
-        <h2>Username</h2>
-        <h2>Date Created</h2>
+        <h4>Username</h4>
+        <h4>Date Created</h4>
     </div>
     <div>
         <h3>Resume Game</h3>
         <a>
             <ul class="flex flex-col">
-                {{!-- list area for resumable games --}}
+                <li>fake games</li>
             </ul>
         </a>
     </div>
     <div>
         <h3>Chat</h3>
         <ol>
-            <li class="flex">
-                <h1>Username</h1>
+            <li class="flex justify-around">
+                <h5>Username</h5>
                 <p>Sample chat text</p>
             </li>
         </ol>
