--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,8 @@
 <div class="flex flex-col sm:flex-row justify-around">
     <div>
         <h3>Account</h3>
-        <h4>Username</h4>
-        <h4>Date Created</h4>
+        <h4>{{user_name}}</h4>
+        <h4>Profile created on:{{user.createdat}}</h4>
     </div>
     <div>
         <h3>Resume Game</h3>
@@ -14,11 +14,7 @@
     </div>
     <div>
         <h3>Chat</h3>
-        <ol>
-            <li class="flex justify-around">
-                <h5>Username</h5>
-                <p>Sample chat text</p>
-            </li>
-        </ol>
+        {{! Add Chat Partial}}
+        {{> chat }}
     </div>
 </div>
