added resume partial

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -6,11 +6,7 @@
     </div>
     <div>
         <h3>Resume Game</h3>
-        <a>
-            <ul class="flex flex-col">
-                <li>fake games</li>
-            </ul>
-        </a>
+        {{> resume}}
     </div>
     <div>
         <h3>Chat</h3>
