--- a/views/partials/resume.handlebars
+++ b/views/partials/resume.handlebars
@@ -1,7 +1,14 @@
 <a class="flex flex-col box-border border-2 p-3">
     <ul class="flex flex-col">
-        <li>fake games</li>
-        <li>bad game</li>
-        <li>good game</li>
+        {{#each Game}}
+            <li>
+                <h4>{{board1.owner}} vs. {{board2.owner}}</h4>
+                <h5>It is {{turn}}'s turn.</h5>
+            </li>
+        {{/each}}
+        <li class="flex flex-col box-border border-2 justify- center">
+            <h4>user1 vs. user2</h4>
+            <h5>It is user1's turn.</h5>
+        </li>
     </ul>
 </a>
