--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
         referrerpolicy="no-referrer" />
         <title>ChattleShip</title>
     </head>
-    <body class="h-screen font-mono prose-md sm:prose-xl">
+    <body class="font-mono prose-md sm:prose-xl">
         <header class="flex flex-col justify-between p-3">
             <a class="flex justify-end" href="/"><span class="oi border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" data-glyph="cog"></span></a>
         
