--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -15,8 +15,8 @@
     </form>
 </div>
 
-<div class="flex flex-col p-5">
-    <h2>OR</h2>
+<div class="flex justify-center flex-col p-2">
+    <h2 class="flex justify-center">OR</h2>
 </div>
 
 <div class="flex flex-col">
