--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,5 +51,5 @@
     </body>
     
     {{!-- md:flex-row md:justify-between --}}
-	<script src="./javascript/logout.js"></script>
+	<script src="/javascript/logout.js"></script>
 </html>
