--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -1,6 +1,6 @@
  <div class=" flex flex-col box-border border-2 p-3">
      <title>Game Chat</title>
-     <ul id="chat-area" class="chat-area flex flex-col">
+     <ul id="chatArea" class="chat-area flex flex-col">
         {{!-- Enter in dynamically manipulated code from users as list items --}}
         {{#each message}}
             {{#if User1}}
@@ -23,4 +23,5 @@
     <chat>
         john: ...Wow, just gonna ghost me?
     </chat>
+	<script src="/javascript/chat.js"></script>
 </div>
