Made the theme blue-will work on later

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,13 @@
         referrerpolicy="no-referrer" />
         <title>ChattleShip</title>
     </head>
-    <body class="font-mono prose-md sm:prose-xl">
+    <body class="bg-sky-900 text-slate-300 font-mono prose-md sm:prose-xl">
         <header class="flex flex-col justify-between p-3">
             <a class="flex justify-end" href="/"><span class="oi border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" data-glyph="cog"></span></a>
         
             <div class="flex flex-col justify-between sm:flex-row">
                 <a class="flex justify-center prose-lg sm:items-center" href="/">
-                <h1 class="sm:mb-0">ChattleShip</h1>
+                    <h1 class="sm:mb-0">ChattleShip</h1>
                 </a> 
 
                 {{!-- {{#if loggedIn}} --}}
