--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,12 +3,12 @@
         <button id="resumeGame" class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" type="submit">Resume</button>
         <a>
             <ul class="flex flex-col">
-                {{#each game}}
+                
 
                     <li>{{this}}</li>
                     {{!-- list area for resumable games --}}
-                    
-                {{/each}}
+
+                
             </ul>
         </a>
     </div>
@@ -16,12 +16,12 @@
         <button id="joinGame" class="border-2 border-transparent rounded-xl hover:brightness-200 hover:shadow-xl hover:shadow-black" type="submit">Join</button>
         <a>
             <ul class="flex flex-col">
-                {{#each}}
+                {{!-- {{#each}} --}}
 
                     <li>{{this}}</li>
                     {{!-- joinable games --}}
 
-                {{/each}}
+                {{!-- {{/each}} --}}
             </ul>
         </a>
     </div>
