--- a/views/partials/join.handlebars
+++ b/views/partials/join.handlebars
@@ -1,18 +1,15 @@
 <a class="flex flex-col box-border border-2 p-3">
-    <ul class="flex flex-col">
+    <ul>
         {{#each Game}}
             <li>
-                <h4>{{board.owner}} vs. {{board.owner}}</h4>
-                <h5>It is {{turn}}'s turn.</h5>
+                <h4>{{board.owner}}
             </li>
         {{/each}}
         <li class="flex flex-col box-border border-2 hover:bg-black-500">
-            <h4>user1 vs. user2</h4>
-            <h5>It is user1's turn.</h5>
+            <h4>user1</h4>
         </li>
         <li class="flex flex-col box-border border-2">
-            <h4>user1 vs. user2</h4>
-            <h5>It is user1's turn.</h5>
+            <h4>user2</h4>
         </li>
     </ul>
 </a>
