--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -7,7 +7,7 @@
 	</ul>
     <div class="flex flex-row w-full">
         <label class="px-1" for="chat-input">Chat</label>
-        <input class="h-5/6 w-2/3 pl-1 mt-1" type="text" id="chat-input" />
+        <input class="text-black h-5/6 w-2/3 pl-1 mt-1" type="text" id="chat-input" />
         <button class="p-1 w-1/6" type="submit">
             <span class="oi" data-glyph="comment-square"></span>
         </button>
