update game board

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -4,17 +4,17 @@
             <div class="flex flex-col mr-2 ml-2" id="game-enemy">
                 <h2>Enemy Board</h2>
                 <div class="flex flex-row justify-between" id="number-grid">
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="0"></div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="1">1</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="2">2</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="3">3</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="4">4</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="5">5</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="6">6</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="7">7</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="8">8</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="9">9</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="10">10</div>
+                    <div class="flex flex-col w-11" id="0"></div>
+                    <div class="flex flex-col w-11" id="1">1</div>
+                    <div class="flex flex-col w-11" id="2">2</div>
+                    <div class="flex flex-col w-11" id="3">3</div>
+                    <div class="flex flex-col w-11" id="4">4</div>
+                    <div class="flex flex-col w-11" id="5">5</div>
+                    <div class="flex flex-col w-11" id="6">6</div>
+                    <div class="flex flex-col w-11" id="7">7</div>
+                    <div class="flex flex-col w-11" id="8">8</div>
+                    <div class="flex flex-col w-9" id="9">9</div>
+                    <div class="flex flex-col w-11" id="10">10</div>
                 </div>
                 <div class="flex flex-row" id="A">
                     <div class="pr-2 pl-2" id="LA">A</div>
@@ -154,17 +154,17 @@
             <div class="flex flex-col mr-2 ml-2" id="game-player">
                 <h2>Player Board</h2>
                 <div class="flex flex-row justify-between" id="number-grid">
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="0"></div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="1">1</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="2">2</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="3">3</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="4">4</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="5">5</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="6">6</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="7">7</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="8">8</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="9">9</div>
-                    <div class="flex flex-col w-10 pr-2 pl-2" id="10">10</div>
+                    <div class="flex flex-col w-11" id="0"></div>
+                    <div class="flex flex-col w-11" id="1">1</div>
+                    <div class="flex flex-col w-11" id="2">2</div>
+                    <div class="flex flex-col w-11" id="3">3</div>
+                    <div class="flex flex-col w-11" id="4">4</div>
+                    <div class="flex flex-col w-11" id="5">5</div>
+                    <div class="flex flex-col w-11" id="6">6</div>
+                    <div class="flex flex-col w-11" id="7">7</div>
+                    <div class="flex flex-col w-11" id="8">8</div>
+                    <div class="flex flex-col w-9" id="9">9</div>
+                    <div class="flex flex-col w-11" id="10">10</div>
                 </div>
                 <div class="flex flex-row" id="A">
                     <div class="pr-2 pl-2" id="LA">A</div>
