--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -2,15 +2,17 @@
 	<title class="border-2">Game Chat</title>
 	<ul id="chatArea" class="chat-area flex flex-col border-2 py-1" data-chat-id="{{enemyBoard.user.dataValues.id}}">
 		{{!-- Enter in dynamically manipulated code from users as list items --}}
-        <li>Hey guys</li>
+        
         
 	</ul>
     <div class="flex flex-row w-full">
         <label class="px-1" for="chat-input">Chat</label>
-        <input class="text-black h-5/6 w-2/3 pl-1 mt-1" type="text" id="chat-input" />
-        <button class="p-1 w-1/6" type="submit">
-            <span class="oi" data-glyph="comment-square"></span>
-        </button>
+        <form>
+            <input class="text-black h-2/3 w-2/3 pl-1 mt-1" type="text" id="chat-input" />
+            <button class="p-1 w-1/6 hover:bg-sky-600 active:outline outline-2" type="submit">
+                <span class="oi" data-glyph="comment-square"></span>
+            </button>
+        </form>
     </div>
 	<script src="/javascript/chat.js"></script>
 </div>
