--- a/views/partials/chat.handlebars
+++ b/views/partials/chat.handlebars
@@ -7,9 +7,9 @@
 	</ul>
     <div class="flex flex-row w-full">
         <label class="px-1" for="chat-input">Chat</label>
-        <form>
+        <form id="chat-form">
             <input class="text-black h-2/3 w-2/3 pl-1 mt-1" type="text" id="chat-input" />
-            <button class="p-1 w-1/6 hover:bg-sky-600 active:outline outline-2" type="submit">
+            <button id="chat-submit" class="p-1 w-1/6 hover:bg-sky-600 active:outline outline-2" type="submit">
                 <span class="oi" data-glyph="comment-square"></span>
             </button>
         </form>
