Black text input

--- a/views/create-game.handlebars
+++ b/views/create-game.handlebars
@@ -151,31 +151,31 @@
         <form class="flex flex-col justify-evenly w-64">
             <div>
                 <label for="carrier">Carrier - 5 Spaces</label>
-                <input type="text" name="carrier" id="carrier">
+                <input type="text" class="text-black" name="carrier" id="carrier">
                 <label for="carrier-rotate">Flip Vertical</label>
                 <input type="checkbox" name="carrier-rotate" id="carrier-rotate">
             </div>
             <div>
                 <label for="battleship">Battleship - 4 Spaces</label>
-                <input type="text" name="battleship" id="battleship">
+                <input type="text" class="text-black" name="battleship" id="battleship">
                 <label for="battleship-rotate">Flip Vertical</label>
                 <input type="checkbox" name="battleship-rotate" id="battleship-rotate">
             </div>
             <div>
                 <label for="crusier">Crusier - 3 Spaces</label>
-                <input type="text" name="crusier" id="crusier">
+                <input type="text" class="text-black" name="crusier" id="crusier">
                 <label for="crusier-rotate">Flip Vertical</label>
                 <input type="checkbox" name="crusier-rotate" id="crusier-rotate">
             </div>
             <div>
                 <label for="submarine">Submarine - 3 Spaces</label>
-                <input type="text" name="submarine" id="submarine">
+                <input type="text" class="text-black" name="submarine" id="submarine">
                 <label for="submarine-rotate">Flip Vertical</label>
                 <input type="checkbox" name="submarine-rotate" id="submarine-rotate">
             </div>
             <div>
                 <label for="destroyer">Destroyer - 2 Spaces</label>
-                <input type="text" name="destroyer" id="destroyer">
+                <input type="text" class="text-black" name="destroyer" id="destroyer">
                 <label for="destroyer-rotate">Flip Vertical</label>
                 <input type="checkbox" name="destroyer-rotate" id="destroyer-rotate">
             </div>
