--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -147,7 +147,7 @@
                     <div class="flex flex-col w-11 box-border border-2 pr-2 pl-2" id="J10"></div>
                 </div>
                 <div>
-                    Target:<input class="border-2" type="text" name="Target" id="target-input">
+                    Target:<input class="text-black border-2" type="text" name="Target" id="target-input">
                     <Button class="border-2 mt-2" type="submit">FIRE!</Button>
                 </div>
             </div>
