Added id for fire button

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -148,7 +148,7 @@
                 </div>
                 <div>
                     Target:<input class="text-black border-2" type="text" name="Target" id="target-input">
-                    <Button class="border-2 mt-2" type="submit">FIRE!</Button>
+                    <Button class="border-2 mt-2" type="submit" id="target-btn">FIRE!</Button>
                 </div>
             </div>
             <div class="flex flex-col mr-2 ml-2" id="game-player">
