--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,14 +3,14 @@
     <form class="login-form">
     <div>
         <label for="username-login">username:</label>
-        <input type="text" id="username-login" />
+        <input class="pl-1 h-2/3 text-black" type="text" id="username-login" />
     </div>
     <div>
         <label for="password-login">password:</label>
-        <input type="password" id="password-login" />
+        <input class="pl-1 h-2/3 text-black" type="password" id="password-login" />
     </div>
     <div>
-        <button type="submit">login</button>
+        <button class="p-1 w-2/3 sm:w-1/6 sm:justify-center hover:bg-sky-600 active:outline outline-2" type="submit">login</button>
     </div>
     </form>
 </div>
@@ -24,14 +24,14 @@
     <form class="signup-form">
     <div>
         <label for="username-signup">username:</label>
-        <input type="text" id="username-signup" />
+        <input class="pl-1 h-2/3 text-black" type="text" id="username-signup" />
     </div>
     <div>
         <label for="password-signup">password:</label>
-        <input type="password" id="password-signup" />
+        <input class="pl-1 h-2/3 text-black" type="password" id="password-signup" />
     </div>
     <div>
-        <button type="submit">signup</button>
+        <button class="p-1 w-2/3 sm:w-1/6 hover:bg-sky-600 active:outline outline-2" type="submit">signup</button>
     </div>
     </form>
 </div>
